Minor alignment fix (trending needs)

--- a/Content/Site.css
+++ b/Content/Site.css
@@ -333,7 +333,7 @@ footer p {
 
 .popular-img {
     margin: 0 auto;
-    width: 300px;
+    width: 375px;
     height: 175px;
     border-radius: 5px;
     border-bottom-left-radius: 0;
